# Pablo-Connect

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  conanfile.py  main.cpp
.github/workflows/: Build.yml  Tests.yml
cmake/: Build.cmake  Tests.cmake
tests/: pawelek_test.cpp  temp.cpp
tests/asio-abstractions-programs/: Multicast.cpp
tests/asio-abstractions/P2P/: TCP_ClientTest.cpp  TLS_ClientTest.cpp
tests/asio-abstractions/P2P/TCP/: TCP_ClientTest.cpp  TCP_DataTransferTests.cpp  TCP_FileStreamTest.cpp
tests/asio-abstractions/P2P/TLS/: TLS_ClientTest.cpp  TLS_DataTransferTests.cpp  TLS_FileStreamTest.cpp
tests/concurrent-structures/: ConcurrentUnorderedMapTest.cpp
utilities/device-scanner/inc/: Scanner.h
utilities/device-scanner/src/: Scanner.cpp
utilities/inc/: AddressResolver.h  AwaitableFlag.h  LanDeviceScanner.h  UniqueFileNamesGenerator.h  egg.h
utilities/inc/P2P/: Client.h  Common.h  ConnectionParent.h  Package.h  Settings.h  TCPConnection.h  TLSConnection.h
utilities/inc/SSL/: CertificateManager.h  Connection.h  Package.h
utilities/inc/TCP/: Connection.h  Package.h
utilities/inc/TCP_TLS_COMMON/: Common.h  Package.h
utilities/inc/TLS/: CertificateManager.h  Connection.h
utilities/network/inc/: AddressResolver.h  AsioCommon.h  CertificateManager.h  Package.h
utilities/network/src/: AddressResolver.cpp  CertificateManager.cpp
utilities/p2p/inc/: Client.h  ConnectionParent.h  Package.h  Settings.h  TCPConnection.h  TLSConnection.h
utilities/p2p/src/: Client.cpp  Settings.cpp
utilities/src/: LanDeviceScanner.cpp  UniqueFileNamesGenerator.cpp
utilities/src/P2P/: Client.cpp  Settings.cpp
utilities/src/SSL/: CertificateManager.cpp
utilities/src/TLS/: CertificateManager.cpp
utilities/system/inc/: AwaitableFlag.h  ConcurrentUnorderedMap.h
utilities/system/src/: UniqueFileNamesGenerator.cpp
